# ara-zephyr-apps

./: .gitignore  meson.build  meson_options.txt
appl/: compile_zephyr.py  compile_zephyr_app.py  meson.build  util.py
appl/OSPERT_2022/: prj.conf
appl/OSPERT_2022/src/: main.c
appl/app_kernel/: prj.conf
appl/app_kernel/src/: config.h  master.c  memmap_b.c
appl/blinky/: prj.conf
appl/blinky/src/: main.c
appl/button/src/: main.c
appl/cpp_sems/: prj.conf
appl/cpp_sems/src/: main.cpp
appl/duplicate_syscalls/src/: main.c  stuff.c
appl/dyn_heap/: prj.conf
appl/dyn_heap/src/: main.c
appl/dyn_isr/: prj.conf
appl/dyn_isr/src/: main.c
appl/dyn_msgq/: prj.conf
appl/dyn_msgq/src/: main.c
appl/dyn_pipe/: prj.conf
appl/dyn_pipe/src/: main.c
appl/dyn_queue/src/: main.c
appl/dyn_sems/src/: main.c
appl/dyn_stack/src/: main.c
appl/dyn_sys_sems/src/: main.c
appl/latency_measure/: prj.conf
appl/latency_measure/src/: coop_ctx_switch.c  int_to_thread.c  int_to_thread_evt.c  main.c  sema_test_signal_release.c  thread.c  thread_switch_yield.c  utils.h
appl/minimal/: common.conf
appl/minimal/src/: main.c
appl/multi_init/src/: main.c
appl/prod_consumer/: prj.conf
appl/prod_consumer/src/: app_a.c  app_a.h  app_b.c  app_b.h  main.c  main.h  sample_driver.h  sample_driver_foo.c  sample_driver_handlers.c
appl/shared_mem/: prj.conf
appl/shared_mem/src/: main.c  main.h
appl/static_heap/: prj.conf
appl/static_heap/src/: main.c
appl/static_isr/src/: main.c
appl/static_msgq/src/: main.c
appl/static_pipe/: prj.conf
appl/static_pipe/src/: main.c
appl/static_queue/src/: main.c
appl/static_sems/src/: main.c
appl/static_stack/src/: main.c
appl/static_sys_sems/: prj.conf
appl/static_sys_sems/src/: main.c
appl/static_threads/src/: main.c
appl/sys_kernel/: prj.conf
appl/sys_kernel/src/: syskernel.c  syskernel.h
settings/: meson.build
subprojects/: .gitignore  zephyr-toolchain.wrap
tools/: meson.build
