option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
    description: 'Set the architecture for which the test applications are built.', yield: true)
option('arm_gcc_version', type: 'string', value: 'default', yield: true,
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC. Only relevant, if arch==arm.')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/thumb/v7-m/nofp/', yield: true,
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')
option('zephyr_toolchain_dir', type: 'string', value: 'zephyrproject', yield: true,
    description: 'The path where the zephyr toolchain (zephyrproject) should be located. Run the target init_zephyr_toolchain to generate this dir. Relative paths start from home directory $HOME')
